# SOLhycool

./: .dockerignore  .env.dev  .env.template  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.dev  README.md  SOLhycool.code-workspace  docker-compose.dev.yml  docker-compose.yml  environment-dev.yml  environment-prod.yml  environment.yml  environment_test.yml  pyproject.toml
deployment/: .env  README.md  airflow.cfg  docker-compose.yml  pyproject.toml
deployment/dags/: experimental_horizon_optimization.py  experimental_horizon_optimization_day_report.py  horizon_optimization.py  horizon_optimization_day_report.py  horizon_optimization_test.py  read_write_data.py  sim_year_horizon_optimization.py  test.py
deployment/notebooks/: read_write.ipynb  tests.ipynb
deployment/scripts/: dev-entrypoint.sh
deployment/src/deployment/: __init__.py  webdav.py
deployment/src/solhycool_deployment/: __init__.py  visualizations.py  webdav.py
modeling/: README.md  pyproject.toml  test_wct_modified.m
modeling/assets/: sc_out_exp.csv  sc_out_sim.csv
modeling/data/: README.md  cc_out_exp.csv  cc_out_mod_data.csv  cc_out_mod_physical.csv  dc_exp1_exp.csv  dc_exp1_mod_data.csv  dc_exp1_mod_physical.csv  dc_exp3_exp.csv  dc_exp3_mod_data.csv  dc_exp3_mod_physical.csv  dc_nusselt.csv  dc_out_exp.csv  dc_out_mod_physical.csv  sc_exp1_exp.csv  sc_exp1_mod_physical.csv  wct_exp1_exp.csv  wct_exp2_exp.csv  wct_exp3_exp.csv
modeling/data/models_data/: model_data_dc_fp_andasol_25gaussian_mimo.mat  model_data_dc_fp_andasol_50gaussian_mimo.mat  model_data_dc_fp_andasol_75gaussian_mimo.mat  model_data_dc_fp_andasol_gaussian_mimo.mat  model_data_dc_fp_pilot_plant_gaussian_cascade.mat  model_data_dc_fp_pilot_plant_gaussian_mimo.mat  model_data_dc_fp_pilot_plant_reduced_gaussian_cascade.mat  model_data_wct_fp_andasol_feedforward_cascade.mat  model_data_wct_fp_andasol_gaussian_cascade.mat  model_data_wct_fp_andasol_radial_basis2_cascade.mat  model_data_wct_fp_pilot_plant_cascadeforwardnet_mimo.mat  model_data_wct_fp_pilot_plant_feedforward_mimo.mat  model_data_wct_fp_pilot_plant_gaussian_cascade.mat  model_data_wct_fp_pilot_plant_radial_basis2_cascade.mat  model_data_wct_fp_pilot_plant_radial_basis2_mimo.mat  model_data_wct_fp_pilot_plant_radial_basis_cascade.mat  model_data_wct_fp_pilot_plant_radial_basis_mimo.mat  model_data_wct_inverse_fp_pilot_plant_feedforward_mimo.mat  model_data_wct_inverse_fp_pilot_plant_gaussian_mimo.mat  model_data_wct_inverse_fp_pilot_plant_radial_basis2_mimo.mat
modeling/matlab/: combined_cooler_model.m  combined_cooler_model.prj  combined_cooler_modelSample2.m  combined_cooler_model_v0.m  debug.m  default_parameters.m  dummy_fun.m  evaluate_decision_variables.m  evaluate_operation.asv  evaluate_operation.m  example_evaluate_decision_variables.m  example_evaluate_operation.asv  example_evaluate_operation.m  example_extended_combined_cooler_model.m  example_fans_calculator.m  example_simple_combined_cooler_model.m  fans_calculator.m  run_examples.m  scale_models.m  test_air_flow_to_fan_conversions.asv  test_air_flow_to_fan_conversions.m  test_inverse_wct_model.m  test_model.m  test_wct_physical_model.m
modeling/matlab/component_models/: README.md  SurfaceCondeser_v4.m  condenser_heat_transfer_coefficient.m  condenser_heats_model.m  condenser_model.m  (+13 more)
modeling/notebooks/: combined_cooler_validation.ipynb  dry_cooler_validation.ipynb  med.ipynb  model_inputs_exploration.ipynb  scale_results_prototype.ipynb  surface_condenser_validation.ipynb  test_viz.ipynb  validation_table.ipynb  wet_cooler_validation.ipynb
modeling/scripts/: asd.py  evaluate_physical_model_wct.py
optimization/: README.md  environment.yml  pyproject.toml  test_flattened_serialization.py
optimization/data/: optimization_config.json
optimization/notebooks/: cc_generate_pareto_fronts.ipynb  cc_horizon_combinatoria.ipynb  cc_horizon_optimization.ipynb  cc_optimization.ipynb  cc_restricted_optimization.ipynb  consumption_candidates.csv  dc_optimization.ipynb  dv_candidates.csv  evaluate_day.ipynb  generate_optimization_config.ipynb  static_problems_algo_comparison_table.ipynb  test_20220505.h5  test_20220506.h5  test_all.h5  wct_optimization.ipynb  wct_restricted_optimization.ipynb
optimization/results/: consumptions_array_20220915.h5  ops_pareto_fronts_20220215.h5  ops_pareto_fronts_20220610.h5  ops_pareto_fronts_20220715.h5  pareto_fronts_for_different_scenarios.html  paretos_set_for_different_scenarios_andasol_pilot_plant_wct100.h5  paretos_set_for_different_scenarios_andasol_pilot_plant_wct100_dc100.h5  paretos_set_for_different_scenarios_andasol_pilot_plant_wct100_dc75.h5  paretos_set_for_different_scenarios_andasol_wct100.h5  paretos_set_for_different_scenarios_pilot_plant_wct100.h5
optimization/scripts/: algo_comparison_cc_horizon.py  asd.py  cc_horizon_algo_comparison.py  cc_horizon_optimization.py  cc_horizon_pareto_generation.py  evaluate_operation.py  pareto_evaluation.py  pareto_gen.py  temp.py  test.py  test_flattened_serialization.py
simulation/: README.md  pyproject.toml
simulation/data/: simulations_config.json
simulation/notebooks/: generate_environment.ipynb  generate_simulations_config.ipynb  generate_thermal_load_andasol.ipynb  generate_thermal_load_profile.ipynb  generate_water_context.ipynb  process_electricity_price_data.ipynb  process_weather_data.ipynb  sim_config.json  test.ipynb  visualize_environment.ipynb  yearly_simulation_unconstrained.ipynb
simulation/results/: water_data_20220101_20241231.csv  water_data_20220101_20241231.h5
simulation/scripts/: analyze_hdf_file.py  asd.py  cc_horizon_optimization.py  get_electricity_market_price.py  run_med_simulations.sh  test_parallel_evaluation.py  test_simulation.py  yearly_simulation_static.py  yearly_simulation_static2.py  yearly_simulation_static_copy.py
visualization/: pyproject.toml
visualization/notebooks/: facility_and_pareto.ipynb  facility_diagram.ipynb  yearly_simulation.ipynb  yearly_simulation_andasol.ipynb
visualization/results/: df_sim_eval_at_20250304T1234.h5  experimental_results_20250728.html
(+515 files in other folders)
