[project]
name = "deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Miguel Serrano Rodríguez", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
deployment = "deployment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
