[project]
name = "solhycool-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Miguel Serrano Rodríguez", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.7.0",
    "pandas>=2.3.1",
    "webdav4>=0.10.0",
    "phd-visualizations",
    "solhycool-modeling",
    "solhycool-optimization",
    "solhycool-visualization"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv.sources]
phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations", branch = "main" }
solhycool-modeling = { path = "../modeling", editable = true }
solhycool-optimization = { path = "../optimization", editable = true }
solhycool-visualization = { path = "../visualization", editable = true }
