[project]
name = "solhycool-modeling"
version = "0.1.0"
description = "Variety of models of a combined cooling system composed by a wet cooling tower, dry cooler and surface condenser at Plataforma Solar de Almería as part of the SOLhycool research project: Combined cooling solutions for water saving in solar thermal applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.0.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.3",
    "phd-visualizations",
    "solhycool-visualization",
    "iapws",
    "salib>=1.5.1",
    "psychrolib>=2.5.0",
]

[project.scripts]
hello = "solhycool_modeling:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "combined_cooler-r2024b",
]

[tool.uv.sources]
combined_cooler-r2024b = { path = "./matlab/exports/for_redistribution_files_only" }
solhycool-visualization = { path = "../visualization", editable = true }
phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations", branch = "main" }
iapws = { git = "https://github.com/jjgomera/iapws", rev = "16b4806d00aabd5c031452222387902f2b02d1db" }
