[project]
name = "solhycool-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan11iguel", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "hjson>=3.1.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    # "solhycool-visualization",
    # "solhycool-modeling",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
]

[project.scripts]
solhycool-optimization = "solhycool_optimization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.sources]
# solhycool-visualization = { path = "../visualization", editable = true }
# solhycool-modeling = { path = "../modeling", editable = true }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
