[project]
name = "solhycool-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan11iguel", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "hjson>=3.1.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
    # "solhycool-visualization",
    # "solhycool-modeling",
    # "bayesian-optimization>=2.0.3",
    # "combined_cooler_model-r2024b",
]

[project.scripts]
solhycool-optimization = "solhycool_optimization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.sources]
# solhycool-visualization = { path = "../visualization", editable = true }
# solhycool-modeling = { path = "../modeling", editable = true }
# combined_cooler_model-r2024b = { path = "../modeling/matlab/exports/for_redistribution_files_only" }
# phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations", branch = "main" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
