[project]
name = "solhycool-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan11iguel", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "solhycool-modeling",
    "solhycool-optimization",
]

[project.scripts]
solhycool-evaluation = "solhycool_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
solhycool-optimization = { path = "../optimization", editable = true }
solhycool-modeling = { path = "../modeling", editable = true }
