[project]
name = "solhycool-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan11iguel", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "phd-visualizations",
    "plotly-resampler>=0.10.0",
    "solhycool-modeling",
    "solhycool-optimization",
    "tables>=3.10.2",
    "suntime==1.2.5", # Do not update, the library is kinda broken: https://github.com/SatAgro/suntime/issues/30 
]

[project.scripts]
solhycool-evaluation = "solhycool_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
solhycool-optimization = { path = "../optimization", editable = true }
solhycool-modeling = { path = "../modeling", editable = true }
phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
