[project]
name = "solhycool-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juan11iguel", email = "juan11iguel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly-resampler>=0.10.0",
    "tables>=3.10.2",
    "suntime==1.2.5",
    "loguru>=0.7.3",
    "kaleido>=1.0.0",
]

[project.scripts]
solhycool-evaluation = "solhycool_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.sources]
# phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations", branch = "main" }
# solhycool-optimization = { path = "../optimization", editable = true }
# solhycool-modeling = { path = "../modeling", editable = true }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
